@@ -76,16 +76,16 @@ module.exports = {
                 if (isNaN(cooldown))
                     cooldown = burst / sustained;
 
-                // Haven't reached burst cap yet, allow
-                if (this.count < burst) {
-                    this.count++;
+                // Cooled down, allow and clear buffer
+                if (this.lastTime < Date.now() - cooldown*1000) {
+                    this.count = 1;
                     this.lastTime = Date.now();
                     return false;
                 }
 
-                // Cooled down, allow and clear buffer
-                if (this.lastTime < Date.now() - cooldown*1000) {
-                    this.count = 0;
+                // Haven't reached burst cap yet, allow
+                if (this.count < burst) {
+                    this.count++;
                     this.lastTime = Date.now();
                     return false;
                 }
